Updates to visualization notebooks and environment files

--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,11 @@ channels:
 dependencies:
   - h5py=2.10
   - ipywidgets=7.6
+  - ipympl=0.7
   - joblib=1.0
   - jupyter=1.0
   - matplotlib=3.3
+  - matplotlib-base=3.3
   - numpy=1.19
   - openpyxl=3.0
   - pandas=1.2
