Env updates, heatmap plotting

--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: fiber_photometry
 channels:
   - defaults
 dependencies:
+  -pip
   - h5py
   - hdf5
   - ipywidgets
@@ -21,5 +22,6 @@ dependencies:
   - tqdm
 
   - pip:
+    - openpyxl
     - hmmlearn
     - ipympl
